added solution 11th-HW OnlineBookStoreApplication v1.2 added ShoppingCart and CartItem (fixed comments by mentor)